Add Address card to Parties -> new

--- a/platforms/android/assets/www/css/custom.css
+++ b/platforms/android/assets/www/css/custom.css
@@ -303,3 +303,7 @@ md-tabs.md-accent > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > m
   height: 35px;
   color: #616161;
 }
+
+.card-results {
+  background-color: #eee;
+}
