--- a/www/views/Parties/new.html
+++ b/www/views/Parties/new.html
@@ -10,7 +10,7 @@
         </h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="PartiesCtrl.save()">
-          <md-icon><i class="material-icons">add_location</i></md-icon>
+          <md-icon><i class="material-icons">check</i></md-icon>
         </md-button>
       </div>
     </md-toolbar>
@@ -26,8 +26,8 @@
       <md-card class="card-new-party">
         <img ng-src="img/cocktails.gif" class="md-card-image">
         <md-card-content>
-          <md-input-container class="md-block party-name">
-            <h1><input placeholder="Party Name" ng-model="PartiesCtrl.party.name"></h1>
+          <md-input-container class="md-block">
+            <input placeholder="Party Name" ng-model="PartiesCtrl.party.name">
           </md-input-container>
           
           <md-input-container class="md-block">
@@ -39,7 +39,7 @@
       <md-card class="card-new-party">
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline">Viewing Options</span>
+            <span class="md-headline">Viewing Options:</span>
             <md-divider></md-divider>
           </md-card-title-text>
         </md-card-title>
@@ -56,7 +56,7 @@
       <md-card class="card-new-party">
         <md-card-title>
           <md-card-title-text>
-            <span class="md-headline">When</span>
+            <span class="md-headline">When:</span>
             <md-divider></md-divider>
           </md-card-title-text>
         </md-card-title>
@@ -72,6 +72,35 @@
           <p><strong>Duration: </strong>{{PartiesCtrl.party.hours}} Hours</p>
           
           <md-slider flex min="1" max="24" class="md-primary"  ng-model="PartiesCtrl.party.hours" md-discrete></md-slider>
+          
+        </md-card-content>
+      </md-card>
+      
+      <md-card class="card-new-party">
+        <md-card-title>
+          <md-card-title-text>
+            <span class="md-headline">Where:</span>
+            <md-divider></md-divider>
+          </md-card-title-text>
+        </md-card-title>
+        <md-card-content>
+          <md-input-container class="md-block">
+            <input placeholder="Address" ng-model="PartiesCtrl.party.location.address">
+            <md-icon ng-click="PartiesCtrl.searchAddress()"><i class="material-icons">search</i></md-icon>      
+          </md-input-container>
+          
+          <div ng-show="PartiesCtrl.searchAddressResults.length > 1">
+            <md-card class="card-results" ng-repeat="result in PartiesCtrl.searchAddressResults" ng-click="PartiesCtrl.selectAddress($index)">
+              <md-card-content>
+                <p>{{result.formatted_address}}</p>
+              </md-card-content>
+            </md-card>
+          </div>
+          
+          <div ng-show="PartiesCtrl.selectedAddress !== null">
+            <img ng-src="{{PartiesCtrl.getMap()}}" class="img-responsive">
+            <p>{{PartiesCtrl.selectedAddress.formatted_address}}</p>
+          </div>
           
         </md-card-content>
       </md-card>
