--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -125,6 +125,27 @@ md-sidenav a {
   color: #FFC107;
 }
 
+.party-history-card {
+  margin-top: 20px;
+}
+
+.party-history-card .description {
+  color: #9e9e9e;
+}
+
+.party-history-card .ic {
+  margin: auto 0px;
+}
+
+.party-history-card .ic-label {
+  color: rgba(0,0,0,0.54);
+}
+
+.party-history-card .md-headline {
+  color: #616161;
+  font-weight: bold;
+}
+
 .toolbar-rating-label md-icon {
   vertical-align: baseline;
   width: 13px;
