--- a/www/views/Parties/host.html
+++ b/www/views/Parties/host.html
@@ -52,7 +52,7 @@
           <md-button class="md-icon-button">
             <md-icon><i class="material-icons">insert_chart</i></md-icon>
           </md-button>
-          <md-button class="md-icon-button" ng-click="PartiesCtrl.remove(party)">
+          <md-button class="md-icon-button" ng-click="PartiesCtrl.confirmRemove($event,party)">
             <md-icon><i class="material-icons">delete</i></md-icon>
           </md-button>
         </md-card-actions>
