--- a/platforms/browser/www/views/Parties/host.html
+++ b/platforms/browser/www/views/Parties/host.html
@@ -19,8 +19,7 @@
     <side-menu></side-menu>
   </div>
   <div flex>
-    <!--<a ng-repeat="party in parties" ng-href="{{'#/Parties/dashboard/' + party.id}}" style="text-decoration: none;">
-      <md-card class="party-card">
+      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties">
         <img ng-src="img/cocktails.gif" class="md-card-image">
         <md-card-title>
           <md-card-title-text>
@@ -28,26 +27,37 @@
           </md-card-title-text>
         </md-card-title>  
         <md-card-content>
-          <p class="description">{{party.description}}</p>
+          <p class="description">{{party.details}}</p>
           
           <div layout="row">
             <div flex="10" class="ic">
               <md-icon><i class="material-icons">location_on</i></md-icon>
             </div>
             <div flex class="ic-label">
-              <p><span>{{party.address}}</span></p>
+              <p><span>{{party.location.address}}</span></p>
             </div>
           </div>
           
-          <p>
-            <span ng-repeat="n in range(1,party.rating)">
-              <md-icon class="ic-rating"><i class="material-icons">star</i></md-icon>
-            </span>
-          </p>
+          <div layout="row">
+            <div flex="10" class="ic">
+              <md-icon><i class="material-icons">event</i></md-icon>
+            </div>
+            <div flex class="ic-label">
+              <p><span>{{FindAPartyCtrl.timestampToCalendar(party.startsAt.timestamp,party.startsAt.utcOffset)}}</span></p>
+            </div>
+          </div>
+          
         </md-card-content>
-      </md-card>  
-    </a>-->
-    
+        <md-card-actions layout="row" layout-align="start center">
+          <md-button class="md-icon-button">
+            <md-icon><i class="material-icons">insert_chart</i></md-icon>
+          </md-button>
+          <md-button class="md-icon-button" ng-click="PartiesCtrl.confirmRemove($event,party)">
+            <md-icon><i class="material-icons">delete</i></md-icon>
+          </md-button>
+        </md-card-actions>
+      </md-card>
+      
     <md-button class="md-fab md-primary" style="position: fixed; bottom: 10px; right: 10px;" ng-href="#/Parties/new">
       <md-icon><i class="material-icons" style="line-height: 56px;">add</i></md-icon>
     </md-button>
