--- a/platforms/browser/www/views/Parties/dashboard.html
+++ b/platforms/browser/www/views/Parties/dashboard.html
@@ -77,7 +77,7 @@
         </div>
       </md-card-content>
       <md-card-actions layout="row" layout-align="start center">
-        <md-button ng-show="PartiesCtrl.partyIsEditable">
+        <md-button ng-show="PartiesCtrl.partyIsEditable" ng-href="{{'#/Parties/edit/' + PartiesCtrl.party.$id }}">
           <md-icon><i class="material-icons">edit</i></md-icon>
         </md-button>
             
