--- a/platforms/browser/www/templates/confirm-remove-party.html
+++ b/platforms/browser/www/templates/confirm-remove-party.html
@@ -1,27 +1,23 @@
 <md-dialog>
-  <md-dialog-content style="padding: 24px;">
+  <md-dialog-content class="delete-dialog-content">
     <div layout="row">
       <div flex>
-        <h2 class="md-title" style="margin-top: 0px;">Delete Party</h2>
-        <div style="background-color: #fbe9e7; color: #d50000; position: relative; padding: 12px 0; line-height: 20px; font-size: 14px;">
-          <md-icon><i class="material-icons" style="padding-left: 15px; color: #ff5252">report_problem</i></md-icon>
-          
-            <span style="padding-left: 15px; padding-right: 15px;">This action can't be undone...</span>
-          
+        <h2 class="md-title title">Delete Party</h2>
+        <div class="highlight">
+          <md-icon><i class="material-icons">report_problem</i></md-icon>
+          <span>This action can't be undone...</span>
         </div>
         
-        <p style="font-size: 13px; color: rgba(0,0,0,0.54); max-width: 280px; line-height: 18px;">
-          Are you sure you want to delete this party?
-        </p>
+        <p class="content-text">Are you sure you want to delete this party?</p>
       </div>
     </div>
   </md-dialog-content>
-  <md-dialog-actions layout="row">
+  <md-dialog-actions layout="row" class="delete-dialog-actions">
     <md-button class="md-raised" ng-click="DialogCtrl.close('cancel')">
       cancel
     </md-button>
     
-    <md-button class="md-raised" ng-click="DialogCtrl.close('delete')" style="background-color: #e04848; color: #FFF;">
+    <md-button class="md-raised delete-btn" ng-click="DialogCtrl.close('delete')">
       delete
     </md-button>
   </md-dialog-actions>
