--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -47,6 +47,10 @@
     <preference default="embedded" name="xwalkMode" />
     <preference default="true" name="xwalkMultipleApk" />
     <preference default="16" name="android-minSdkVersion" />
+    <feature name="NativePageTransitions">
+        <param name="android-package" value="com.telerik.plugins.nativepagetransitions.NativePageTransitions" />
+        <param name="onload" value="true" />
+    </feature>
     <splash density="land-ldpi" src="www/res/screen/android/drawable-land-ldpi/screen.png" />
     <splash density="land-mdpi" src="www/res/screen/android/drawable-land-mdpi/screen.png" />
     <splash density="land-hdpi" src="www/res/screen/android/drawable-land-hdpi/screen.png" />
@@ -73,6 +77,7 @@
     <preference name="android-targetSdkVersion" value="22" />
     <preference name="SplashScreenDelay" value="8000" />
     <preference name="ShowSplashScreenSpinner" value="false" />
+    <preference name="CrosswalkAnimatable" value="true" />
     <icon src="icon.png" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
