--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -124,6 +124,10 @@ md-sidenav a {
   opacity: 0!important;
 }
 
+#drawer #mainPanel #mainContainer {
+  background-color: #FAFAFA;
+}
+
 .label {
   margin-left: 7px;
   color: rgba(0,0,0,0.54);
