Remove side-menu

--- a/www/views/Parties/dashboard.html
+++ b/www/views/Parties/dashboard.html
@@ -2,7 +2,7 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
@@ -15,9 +15,6 @@
 </div>
 
 <div layout="row" style="">
-  <div flex="0">
-    <side-menu></side-menu>
-  </div>
   <div flex>
     <!-- Party Card -->
     <md-card class="party-card">
