--- a/www/views/Home/index.html
+++ b/www/views/Home/index.html
@@ -2,7 +2,7 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
@@ -16,9 +16,6 @@
 </div>
 
 <div layout="row">
-  <div flex="0">
-    <side-menu></side-menu>
-  </div>
   <div flex>
     <!--<div layout="row" id="load-spinner" layout-sm="column" layout-align="space-around" class="progress-circular">
       <md-progress-circular md-mode="indeterminate"></md-progress-circular>
