--- a/www/views/Parties/show.html
+++ b/www/views/Parties/show.html
@@ -1,5 +1,3 @@
-<side-menu></side-menu>
-
 <div layout="row">
   <div flex>
     <img src="img/cocktails.gif" class="img-responsive">
@@ -9,7 +7,7 @@
 <div layout="row">
   <md-toolbar>
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
