--- a/platforms/android/assets/www/css/custom.css
+++ b/platforms/android/assets/www/css/custom.css
@@ -75,25 +75,6 @@ md-card img {
   background-color: #212121;
 }
 
-md-sidenav p {
-  margin-left: 18px;
-  margin-bottom: 26px;
-}
-
-md-sidenav span {
-  vertical-align: middle;
-  color: #616161;
-  font-weight: bold;
-}
-
-md-sidenav md-icon {
-  margin-right: 25px;
-}
-
-md-sidenav a {
-  text-decoration: none;
-}
-
 .label {
   margin-left: 7px;
   color: rgba(0,0,0,0.54);
@@ -378,4 +359,39 @@ md-tabs.md-accent > md-tabs-wrapper > md-tabs-canvas > md-pagination-wrapper > m
   background-color: #e04848;
   color: #FFF;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+}
+
+.menu-card {
+  margin: 0px;
+  height: 100%;
+}
+
+.menu-card .display-name {
+  color: #757575;
+  font-weight: bold;
+  margin-left: 20px;
+}
+
+.menu-card .profile-link {
+  margin-left: 20px;
+  color: #616161;
+  text-decoration: none;
+  font-size: small;
+}
+
+.menu-card .divider {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.menu-card .menu-icon {
+  background-color: #757575;
+  border-radius: 50%;
+  color: #F5F5F5;
+  padding: 10px;
+}
+
+.menu-card .menu-label {
+ font-weight: bold;
+ color: #757575;
 }
