--- a/platforms/android/assets/www/views/Users/index.html
+++ b/platforms/android/assets/www/views/Users/index.html
@@ -2,7 +2,7 @@
   <div flex>
     <md-toolbar class="" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
@@ -15,9 +15,6 @@
 </div>
 
 <div layout="row" style="margin-top: 50px;">
-  <div flex="0">
-    <side-menu></side-menu>
-  </div>
   <div flex>
     <md-card class="card-profile">
       <md-card-content>
