--- a/platforms/browser/www/views/Parties/edit.html
+++ b/platforms/browser/www/views/Parties/edit.html
@@ -2,7 +2,7 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
@@ -18,9 +18,6 @@
 </div>
 
 <div layout="row" style="margin-top: 60px;">
-  <div flex="0">
-    <side-menu></side-menu>
-  </div>
   <div flex>
     <form>
       <md-card class="card-new-party">
