--- a/platforms/browser/www/views/Parties/new.html
+++ b/platforms/browser/www/views/Parties/new.html
@@ -2,11 +2,11 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button" ng-click="toggleLeft()">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
-          <span>New Party</span>
+          <span>Host a Party</span>
         </h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="PartiesCtrl.save()">
@@ -18,9 +18,6 @@
 </div>
 
 <div layout="row" style="margin-top: 60px;">
-  <div flex="0">
-    <side-menu></side-menu>
-  </div>
   <div flex>
     <form>
       <md-card class="card-new-party">
