--- a/www/views/Parties/edit.html
+++ b/www/views/Parties/edit.html
@@ -2,7 +2,7 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
