--- a/www/views/Parties/history.html
+++ b/www/views/Parties/history.html
@@ -2,11 +2,11 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
-          <span>Host a Party</span>
+          <span>Parties</span>
         </h2>
         <span flex></span>
       </div>
@@ -16,7 +16,7 @@
 
 <div layout="row" style="margin-top: 50px;">
   <div flex>
-      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties">
+      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties" ng-show="party.isActive == PartiesCtrl.displayActiveParties">
         <img ng-src="img/cocktails.gif" class="md-card-image">
         <md-card-title>
           <md-card-title-text>
@@ -55,8 +55,5 @@
         </md-card-actions>
       </md-card>
       
-    <md-button class="md-fab md-primary" style="position: fixed; bottom: 10px; right: 10px;" ng-href="#/Parties/new">
-      <md-icon><i class="material-icons" style="line-height: 56px;">add</i></md-icon>
-    </md-button>
   </div>
 </div>
