--- a/www/views/Parties/new.html
+++ b/www/views/Parties/new.html
@@ -2,11 +2,11 @@
   <div flex>
     <md-toolbar class="md-whiteframe-6dp" style="position: fixed;">
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
-          <span>New Party</span>
+          <span>Host a Party</span>
         </h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="PartiesCtrl.save()">
