--- a/www/views/Parties/show.html
+++ b/www/views/Parties/show.html
@@ -7,7 +7,7 @@
 <div layout="row">
   <md-toolbar>
       <div class="md-toolbar-tools">
-        <md-button class="md-icon-button">
+        <md-button class="md-icon-button" ng-href="#/Users/menu">
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
