--- a/platforms/android/assets/www/views/Parties/history.html
+++ b/platforms/android/assets/www/views/Parties/history.html
@@ -16,7 +16,7 @@
 
 <div layout="row" style="margin-top: 50px;">
   <div flex>
-      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties" ng-show="party.isActive == PartiesCtrl.displayActiveParties">
+      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties" ng-show="party.isActive === undefined || party.isActive == PartiesCtrl.displayActiveParties">
         <img ng-src="img/cocktails.gif" class="md-card-image">
         <md-card-title>
           <md-card-title-text>
