Fix Parties -> history ngShow; Fix links in phonegap serve with phonegapDebugMode

--- a/platforms/browser/www/views/Parties/history.html
+++ b/platforms/browser/www/views/Parties/history.html
@@ -6,7 +6,7 @@
           <md-icon><i class="material-icons">menu</i></md-icon>
         </md-button>
         <h2>
-          <span>Parties</span>
+          <span>{{ (PartiesCtrl.displayActiveParties) ? 'Scheduled Parties' : 'History' }}</span>
         </h2>
         <span flex></span>
       </div>
@@ -16,7 +16,8 @@
 
 <div layout="row" style="margin-top: 50px;">
   <div flex>
-      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties" ng-show="party.isActive == PartiesCtrl.displayActiveParties">
+      <md-card class="party-history-card" ng-repeat="party in PartiesCtrl.parties" 
+        ng-show=" ( PartiesCtrl.displayActiveParties && party.endsAt.timestamp > PartiesCtrl.now )  || ( !PartiesCtrl.displayActiveParties && party.endsAt.timestamp < PartiesCtrl.now ) ">
         <img ng-src="img/cocktails.gif" class="md-card-image">
         <md-card-title>
           <md-card-title-text>
