--- a/www/views/Users/menu.html
+++ b/www/views/Users/menu.html
@@ -35,34 +35,64 @@
         <md-tabs  class="" md-dynamic-height md-stretch-tabs="always">
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">link</i></md-icon>
+              <md-icon><i class="material-icons">link</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Links:</p>
               <md-divider></md-divider>
+              <a href="#/">
+                <p>
+                  <md-icon><i class="material-icons">home</i></md-icon>
+                  Home
+                </p>
+              </a>
+              
+              <a href="#/Parties/new">
+                <p>
+                  <md-icon><i class="material-icons">local_bar</i></md-icon>
+                  Host a Party
+                </p>
+              </a>
+              
+              <a href="#/Parties/history/true">
+                <p>
+                  <md-icon><i class="material-icons">schedule</i></md-icon>
+                  Scheduled Parties
+                </p>
+              </a>
+              
+              <a href="#/Parties/history/false">
+                <p>
+                  <md-icon><i class="material-icons">timeline</i></md-icon>
+                  History
+                </p>
+              </a>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">person</i></md-icon>
+              <md-icon><i class="material-icons">person</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Profile:</p>
               <md-divider></md-divider>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">stars</i></md-icon>
+              <md-icon><i class="material-icons">stars</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Reviews:</p>
               <md-divider></md-divider>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">menu</i></md-icon>
+              <md-icon><i class="material-icons">menu</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">App:</p>
