--- a/www/views/Users/menu.html
+++ b/www/views/Users/menu.html
@@ -106,6 +106,19 @@
             <md-tab-body>
               <p class="tab-title">App:</p>
               <md-divider></md-divider>
+              <a ng-click="">
+                <p>
+                  <md-icon><i class="material-icons">info</i></md-icon>
+                  About
+                </p>
+              </a>
+              
+              <a ng-click="UsersCtrl.signout()">
+                <p>
+                  <md-icon><i class="material-icons">power_settings_new</i></md-icon>
+                  Log Out
+                </p>
+              </a>
             </md-tab-body>
           </md-tab>
         </md-tabs>
