--- a/platforms/android/assets/www/views/Users/menu.html
+++ b/platforms/android/assets/www/views/Users/menu.html
@@ -35,38 +35,90 @@
         <md-tabs  class="" md-dynamic-height md-stretch-tabs="always">
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">link</i></md-icon>
+              <md-icon><i class="material-icons">link</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Links:</p>
               <md-divider></md-divider>
+              <a ng-href="#/">
+                <p>
+                  <md-icon><i class="material-icons">home</i></md-icon>
+                  Home
+                </p>
+              </a>
+              
+              <a ng-href="#/Parties/new">
+                <p>
+                  <md-icon><i class="material-icons">local_bar</i></md-icon>
+                  Host a Party
+                </p>
+              </a>
+              
+              <a ng-href="#/Parties/history/true">
+                <p>
+                  <md-icon><i class="material-icons">schedule</i></md-icon>
+                  Scheduled Parties
+                </p>
+              </a>
+              
+              <a ng-href="#/Parties/history/false">
+                <p>
+                  <md-icon><i class="material-icons">timeline</i></md-icon>
+                  History
+                </p>
+              </a>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">person</i></md-icon>
+              <md-icon><i class="material-icons">person</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Profile:</p>
               <md-divider></md-divider>
+              <p class="profile-label">Drescribe yourself in 150 characters:</p>
+              <form>
+                <md-input-container class="md-block">
+                  <textarea ng-model="UsersCtrl.user.bio" md-maxlength="150" rows="5" md-select-on-focus></textarea>
+                </md-input-container>
+              </form>
+              <md-button class="action-btn" ng-click="UsersCtrl.update()">
+                <md-icon><i class="material-icons">check</i></md-icon>
+              </md-button>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">stars</i></md-icon>
+              <md-icon><i class="material-icons">stars</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">Reviews:</p>
               <md-divider></md-divider>
             </md-tab-body>
           </md-tab>
+          
           <md-tab>
             <md-tab-label>
-              <md-icon ><i class="material-icons">menu</i></md-icon>
+              <md-icon><i class="material-icons">menu</i></md-icon>
             </md-tab-label>
             <md-tab-body>
               <p class="tab-title">App:</p>
               <md-divider></md-divider>
+              <a ng-click="UsersCtrl.showAboutBox($event)">
+                <p>
+                  <md-icon><i class="material-icons">info</i></md-icon>
+                  About
+                </p>
+              </a>
+              
+              <a ng-click="UsersCtrl.signout()">
+                <p>
+                  <md-icon><i class="material-icons">power_settings_new</i></md-icon>
+                  Log Out
+                </p>
+              </a>
             </md-tab-body>
           </md-tab>
         </md-tabs>
