--- a/www/views/Users/menu.html
+++ b/www/views/Users/menu.html
@@ -40,28 +40,28 @@
             <md-tab-body>
               <p class="tab-title">Links:</p>
               <md-divider></md-divider>
-              <a href="#/">
+              <a ng-href="#/">
                 <p>
                   <md-icon><i class="material-icons">home</i></md-icon>
                   Home
                 </p>
               </a>
               
-              <a href="#/Parties/new">
+              <a ng-href="#/Parties/new">
                 <p>
                   <md-icon><i class="material-icons">local_bar</i></md-icon>
                   Host a Party
                 </p>
               </a>
               
-              <a href="#/Parties/history/true">
+              <a ng-href="#/Parties/history/true">
                 <p>
                   <md-icon><i class="material-icons">schedule</i></md-icon>
                   Scheduled Parties
                 </p>
               </a>
               
-              <a href="#/Parties/history/false">
+              <a ng-href="#/Parties/history/false">
                 <p>
                   <md-icon><i class="material-icons">timeline</i></md-icon>
                   History
@@ -106,7 +106,7 @@
             <md-tab-body>
               <p class="tab-title">App:</p>
               <md-divider></md-divider>
-              <a ng-click="">
+              <a ng-click="UsersCtrl.showAboutBox($event)">
                 <p>
                   <md-icon><i class="material-icons">info</i></md-icon>
                   About
