Add vendor lib GeoFire; Add geofire locations for parties

--- a/www/views/Parties/dashboard.html
+++ b/www/views/Parties/dashboard.html
@@ -78,7 +78,7 @@
           <md-icon><i class="material-icons">edit</i></md-icon>
         </md-button>
         
-        <md-button class="md-icon-button" ng-click="PartiesCtrl.confirmRemove($event,PartiesCtrl.party,'/Parties/host')">
+        <md-button class="md-icon-button" ng-click="PartiesCtrl.confirmRemove($event,PartiesCtrl.party,'/Parties/history/true')">
           <md-icon><i class="material-icons">delete</i></md-icon>
         </md-button>
       </md-card-actions>
